syntax = "proto3";
package quasarlabs.quasarnode.qbank;

option go_package = "github.com/quasarlabs/quasarnode/x/qbank/types";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "qbank/common.proto";


// Depsoit message object to be stored in the KV store. 
message Deposit {
  uint64 id = 1; // unique deposit id
  string riskProfile = 2; // Supported values are "LOW", "MID", "HIGH"
  string vaultID = 3; 
  string depositorAccAddress = 4; 
  cosmos.base.v1beta1.Coin coin = 5 [ (gogoproto.nullable) = false ];
  LockupTypes lockupPeriod  = 6;
}